--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "marked": "0.3.6",
     "mongoose": "^4.9.2",
     "react": "^15.4.2",
+    "react-autocomplete": "^1.4.2",
     "react-dom": "^15.4.2"
   },
   "devDependencies": {
