--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "private": true,
   "dependencies": {
     "auth0-lock": "^10.14.0",
-    "axios": "0.15.3",
+    "axios": "^0.15.3",
     "body-parser": "^1.17.1",
     "bootstrap": "^3.3.7",
     "cors": "^2.8.3",
@@ -13,8 +13,8 @@
     "foreman": "^2.0.0",
     "html-webpack-plugin": "^2.28.0",
     "jwt-decode": "^2.2.0",
-    "marked": "0.3.6",
-    "mongoose": "^4.9.2",
+    "marked": "^0.3.6",
+    "mongoose": "^4.9.3",
     "react": "^15.4.2",
     "react-autocomplete": "^1.4.2",
     "react-dom": "^15.4.2",
