--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "express-jwt": "^5.1.0",
     "foreman": "^2.0.0",
     "html-webpack-plugin": "^2.28.0",
+    "jquery": "^3.2.1",
     "jwt-decode": "^2.2.0",
     "marked": "^0.3.6",
     "mongoose": "^4.9.3",
